--- a/Portafolio web/index.html
+++ b/Portafolio web/index.html
@@ -260,6 +260,6 @@
         </div>
     </footer>
     <script src="script.js"></script>
-    
+    <script async defer src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBDpLiSpzD3YXJeZf7flL7cQnBCKyygQSI&callback=initMap"></script>
 </body>
 </html>
