--- a/index.html
+++ b/index.html
@@ -1,6 +1,13 @@
 <!DOCTYPE html>
 <html lang="es">
-
+<!--
+    Portafolio web de Andres Garza.
+    WAAAAAAAAAAAAAAAAAAAA
+    Este documento HTML contiene la estructura y el contenido del portafolio, incluyendo secciones para presentación, proyectos y contacto.
+    Utiliza CSS para el estilo y JavaScript para la interactividad.
+    El portafolio incluye un menú de navegación, una sección de presentación con foto y descripción, una sección de proyectos con tarjetas, y un pie de página con información de contacto y redes sociales.
+    El portafolio es responsivo y se adapta a diferentes tamaños de pantalla.
+-->
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
