--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="es">
 <!--
     Portafolio web de Andres Garza.
-    WAAAAAAAAAAAAAAAAAAAA
+    
     Este documento HTML contiene la estructura y el contenido del portafolio, incluyendo secciones para presentación, proyectos y contacto.
     Utiliza CSS para el estilo y JavaScript para la interactividad.
     El portafolio incluye un menú de navegación, una sección de presentación con foto y descripción, una sección de proyectos con tarjetas, y un pie de página con información de contacto y redes sociales.
@@ -16,7 +16,7 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&family=Roboto:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">
-    <title>Andres Garza</title>
+    <title>Portafolio WEB (PROYECTO)</title>
 </head>
 
 <!-- ========================= -->
